# ResearchAgent

./: .env.example  .gitignore  README.md  goal.md  pyproject.toml  requirements.txt  智能体开发步骤与方法.md
detailsStrategy/: 检索机制完整说明.md
docs/: architecture.md  runtime-observability.md  troubleshooting.md  主Agent与子Agent交互流程分析.md  候选论文排序机制.md  研究工作台实现说明.md
scripts/: build_venue_seed.py
src/research_agent/: __init__.py  __main__.py  agent.py  cli.py  demo.py
src/research_agent/agents/: __init__.py  prompts.py  registry.py  runtime_state.py  serial_tools.py  supervisor.py  workflow_guard.py
src/research_agent/api/: __init__.py  app.py  background_runs.py  schemas.py
src/research_agent/application/: __init__.py  artifact_normalization.py  candidate_ranking.py  fallback.py  library_service.py  paper_ids.py  ports.py  research_service.py  search_review.py
src/research_agent/data/: venue_rankings.json
src/research_agent/domain/: __init__.py  models.py  (+1 more)
tests/: test_agent_factory.py  test_api.py  test_candidate_ranking.py  test_config.py  test_conversation_isolation.py  test_demo.py  test_frontend_run_failure.py  test_frontend_search_review.py  test_library.py  test_library_agent.py  test_library_tools.py  test_model_providers.py  test_observability.py  test_paper_workspace.py  test_project_tools.py  test_repository.py  test_research_library.py  test_runtime_state.py  test_search_review.py  test_serial_tool_execution.py  test_service_and_fallback.py  test_state_machine.py  test_supervisor_policy.py  test_tools.py  test_venue_rankings.py  test_workflow_guard.py
(+21 files in other folders)
