[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "evidence-research-agent"
version = "0.2.0"
description = "A Deep Agents and LangChain demo for evidence-driven literature research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.6.8,<1.0",
  "fastapi>=0.115,<1.0",
  "langchain>=1.0,<2.0",
  "langchain-openai>=1.0,<2.0",
  "pydantic>=2.9,<3.0",
  "python-dotenv>=1.0,<2.0",
  "pypdf>=5.0,<7.0",
  "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9"]

[project.scripts]
research-agent = "research_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
